# CPP_utils

./: .gitignore  CMakeLists.txt  README.md
DevGuide/: Instructions.md
DevGuide/utils/: configureBuild.bat  getDependencies.bat  runBuild.bat  runtests.bat
source/: attriCoord.cpp  attriCoord.hpp  cpp_utils.hpp  matrix.cpp  matrix.hpp  quaternion.cpp  quaternion.hpp  vector.cpp  vector.hpp
source/linear_algebra/: matrix.cpp  matrix.hpp  vector.cpp  vector.hpp
source/quaternions/: quaternion.cpp  quaternion.hpp
test/: attriCoord_unittest.cpp  matrix_unittest.cpp  quaternion_unittest.cpp  testing.hpp  vector_unittest.cpp
test/linear_algebra/: matrix_unittest.cpp  vector_unittest.cpp
